--- a/css/style.css
+++ b/css/style.css
@@ -315,9 +315,11 @@ body {
 
 
 .footer {
-    background: coral;
+    background: var(--color--one);
     grid-area: section__footer;
     display: grid;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     grid-template-columns: 1fr 8fr 1fr;
     grid-template-areas: ". footer__menu .";
 }
@@ -337,9 +339,17 @@ body {
 .footer ul li a {
     text-decoration: none;
     display: flex;
+    align-items: center;
+    gap: 5px;
     flex-direction: column;
 }
-
+.footer span {
+    color: var(--color--five);
+}
+.footer i {
+    font-size: 1.78em;
+    color: var(--color--four);
+}
 .nav__information {
     /* background: red; */
     grid-area: nav__2;
